--- a/app/src/main/res/layout/activity_signup_facebook.xml
+++ b/app/src/main/res/layout/activity_signup_facebook.xml
@@ -44,12 +44,13 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
+        android:fontFamily="sans-serif"
         android:hint="닉네임"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
         android:textColorHint="#A0A0A0"
         android:textSize="14dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -61,12 +62,13 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
+        android:fontFamily="sans-serif"
         android:hint="상태메세지(선택)"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
         android:textColorHint="#A0A0A0"
         android:textSize="14dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
