--- a/app/src/main/res/layout/activity_script_information.xml
+++ b/app/src/main/res/layout/activity_script_information.xml
@@ -38,44 +38,39 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4"
         android:background="@drawable/event_back" />
 
-    <Button
-        android:id="@+id/btn_follower"
-        android:layout_width="80dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/following_unclick"
+        android:backgroundTint="#A0A0A0"
+        android:ems="10"
         android:fontFamily="@font/bmdohyeon"
-        android:text="팔로워"
-        android:textColor="#ffffff"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_following"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/btn_following"
-        android:layout_width="80dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/following_unclick"
-        android:fontFamily="@font/bmdohyeon"
-        android:text="팔로잉"
-        android:textColor="#ffffff"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_follower"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-
-    <ListView
-        android:id="@+id/lv_following"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:singleLine="true"
+        android:text="제목"
+        android:textColor="#A0A0A0"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_following" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <TextView
+        android:id="@+id/tv_script"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#eeeeee"
+        android:ems="10"
+        android:fontFamily="@font/bmdohyeon"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="대본"
+        android:textColor="#A0A0A0"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
 </android.support.constraint.ConstraintLayout>
