--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -87,6 +87,7 @@
         android:layout_height="50dp"
         android:background="#00ff0000"
         android:fontFamily="@font/bmdohyeon"
+        android:visibility="invisible"
         android:text="전송하기"
         android:textColor="#54c4ad"
         android:textSize="16sp"
