--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/navbg"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
+            android:background="@drawable/navbg"
             >
 
             <LinearLayout
@@ -69,10 +69,9 @@
 
         <include
             android:id="@+id/NavBody"
-            android:layout_height="match_parent"
+            layout="@layout/header"
             android:layout_width="match_parent"
-            layout = "@layout/header"
-            />
+            android:layout_height="match_parent" />
 
     </android.support.design.widget.NavigationView>
 
