--- a/app/src/main/res/layout/pop_makeroom.xml
+++ b/app/src/main/res/layout/pop_makeroom.xml
@@ -57,7 +57,7 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="48dp"
+        android:layout_width="70dp"
         android:layout_height="35dp"
         android:layout_marginEnd="250dp"
         android:layout_marginRight="250dp"
@@ -74,7 +74,7 @@
 
     <EditText
         android:id="@+id/RoomName"
-        android:layout_width="250dp"
+        android:layout_width="230dp"
         android:layout_height="35dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
@@ -83,30 +83,27 @@
         android:fontFamily="@font/bmdohyeon"
         android:paddingLeft="10dp"
         android:textColor="#A0A0A0"
-        android:textSize="14sp"
+        android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:layout_marginTop="140dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="60dp"
+            android:layout_width="65dp"
             android:layout_height="35dp"
-            android:layout_marginEnd="250dp"
-            android:layout_marginRight="250dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/bmdohyeon"
             android:gravity="center"
             android:text="참가 인원"
             android:textColor="@color/white"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -116,39 +113,41 @@
             android:layout_height="35dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/bmdohyeon"
             android:gravity="center"
             android:text="Num"
             android:textColor="@color/white"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView9"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ScriptText"
-            android:layout_width="60dp"
+            android:layout_width="65dp"
             android:layout_height="35dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/bmdohyeon"
             android:gravity="center"
             android:text="대본 선택"
             android:textColor="@color/white"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/MaxPeople"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         <Spinner
             android:id="@+id/PlayScript"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ScriptText"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ScriptText" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -158,7 +157,7 @@
         android:layout_height="30dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
@@ -175,7 +174,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
