First Final Complete

--- a/app/src/main/res/layout/activity_askscript.xml
+++ b/app/src/main/res/layout/activity_askscript.xml
@@ -67,7 +67,9 @@
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
         android:hint="대본 입력"
-        android:inputType="textPersonName"
+        android:inputType="text|textMultiLine|textCapSentences"
+        android:maxLength="500"
+        android:maxLines="50"
         android:textColor="#A0A0A0"
         android:textColorHint="#A0A0A0"
         android:textSize="15sp"
