--- a/app/src/main/res/layout/activity_script_information.xml
+++ b/app/src/main/res/layout/activity_script_information.xml
@@ -62,11 +62,10 @@
         android:layout_height="500dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="#eeeeee"
-        android:ems="10"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
-        android:inputType="textPersonName"
         android:text="대본"
+        android:textAlignment="center"
         android:textColor="#A0A0A0"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
