--- a/app/src/main/res/layout/activity_square.xml
+++ b/app/src/main/res/layout/activity_square.xml
@@ -54,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <ListView
+        android:id="@+id/lv_script_square"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
