--- a/app/src/main/res/layout/listview_event.xml
+++ b/app/src/main/res/layout/listview_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="#eeeeee"
+    android:background="#33eeeeee"
     android:orientation="horizontal">
 
     <android.support.constraint.ConstraintLayout
@@ -54,12 +54,12 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout4"
-        android:layout_width="120dp"
+        android:layout_width="60dp"
         android:layout_height="50dp"
         android:background="@drawable/edittext_login_whitebox"
         android:orientation="horizontal"
-        android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
@@ -70,25 +70,11 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/event_recording_start"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_runningtime"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_runningtime" />
-
-        <TextView
-            android:id="@+id/tv_runningtime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/bmdohyeon"
-            android:gravity="center"
-            android:text="4:00"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_play"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
