--- a/app/src/main/res/layout/enter_room_pop.xml
+++ b/app/src/main/res/layout/enter_room_pop.xml
@@ -44,12 +44,12 @@
 
     <Button
         android:id="@+id/btn_enter"
-        android:layout_width="70dp"
+        android:layout_width="60dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/bmdohyeon"
-        android:textColor="@color/white"
-        android:text="참가" />
+        android:text="참가"
+        android:textColor="@color/white" />
 </LinearLayout>
