--- a/app/src/main/res/layout/listview_free.xml
+++ b/app/src/main/res/layout/listview_free.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="#33eeeeee"
+    android:background="#eeeeee"
     android:orientation="horizontal">
 
     <android.support.constraint.ConstraintLayout
