--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/RoomKind"
-            android:layout_width="80dp"
-            android:layout_height="28dp"
+            android:layout_width="60dp"
+            android:layout_height="25dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="11dp"
@@ -32,8 +32,8 @@
 
         <ImageView
             android:id="@+id/On"
-            android:layout_width="60dp"
-            android:layout_height="20dp"
+            android:layout_width="50dp"
+            android:layout_height="12dp"
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/RoomKind"
@@ -46,31 +46,31 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="23dp"
             android:fontFamily="@font/bmdohyeon"
             android:gravity="right"
             android:textColor="#A0A0A0"
-            android:textSize="15sp"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/title_text"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:fontFamily="@font/bmdohyeon"
             android:textColor="#A0A0A0"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/On" />
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/On"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
